syntax = "proto3";

package Proto.Command.Tags;

service TagCommandService {
  rpc CreateTag (CreateTagCommand) returns (CommandResponse);
  rpc UpdateTag (UpdateTagCommand) returns (CommandResponse);
}

message CreateTagCommand {
  string tagId = 1;
  string name = 2;
}

message UpdateTagCommand {
  string tagId = 1;
  string name = 2;
}

message CommandResponse {
  bool success = 1;
}
